@@ -1367,6 +1367,13 @@ LUA_FUNCTION(Lua_PlayerAddLeprosy) {
 	return 0;
 }
 
+LUA_FUNCTION(Lua_PlayerGetUrnSouls) {
+	Entity_Player* player = lua::GetUserdata<Entity_Player*>(L, 1, lua::Metatables::ENTITY_PLAYER, "EntityPlayer");
+	lua_pushinteger(L, player->_urnSouls);
+
+	return 1;
+}
+
 LUA_FUNCTION(Lua_PlayerAddUrnSouls) {
 	Entity_Player* player = lua::GetUserdata<Entity_Player*>(L, 1, lua::Metatables::ENTITY_PLAYER, "EntityPlayer");
 	int count = (int)luaL_checkinteger(L, 2);
@@ -2041,6 +2048,7 @@ HOOK_METHOD(LuaEngine, RegisterClasses, () -> void) {
 		{ "AddBoneOrbital", Lua_PlayerAddBoneOrbital },
 		//{ "AddItemCard", Lua_PlayerAddItemCard },
 		{ "AddLeprosy", Lua_PlayerAddLeprosy },
+		{ "GetUrnSouls", Lua_PlayerGetUrnSouls },
 		{ "AddUrnSouls", Lua_PlayerAddUrnSouls },
 		{ "CanAddCollectibleToInventory", Lua_PlayerCanAddCollectibleToInventory },
 		{ "CanCrushRocks", Lua_PlayerCanCrushRocks },
